Fixes magwest prereg banner image z-index

--- a/magwest/static/theme/prereg_extra.css
+++ b/magwest/static/theme/prereg_extra.css
@@ -18,7 +18,7 @@
 
     position: absolute;
     top: 133%;
-    z-index: 9997;
+    z-index: 97;
 }
 
 
